cluster/sandbox/keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-keycloak-instance
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect : "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: sandbox-keycloak.privatelink.uksouth.azmk8s.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: default-instance-service
            port: 
              name: https
  tls:
  - hosts:
    - sandbox-keycloak.privatelink.uksouth.azmk8s.io
    secretName: sandbox-keycloak.privatelink.uksouth.azmk8s.io-tls
